Performed various renaming actions